--- a/assignment/a2/HW2_Liu Zi Jian.Rmd
+++ b/assignment/a2/HW2_Liu Zi Jian.Rmd
@@ -3,9 +3,10 @@ title: "HW2_Liu Zi Jian"
 author: "Zi Jian Liu"
 date: "05/02/2021"
 output:
-  pdf_document: 
+  pdf_document:
     toc: yes
     keep_tex: yes
+    latex_engine: xelatex
 ---
 
 ```{r setup, include=FALSE}
@@ -40,6 +41,7 @@ boxplot(plot1)
 boxplot(plot2)
 boxplot(plot3)
 ```
+  
 Above is the boxplots of the housing prices for the most expensive 3 zipcodes.
 
 ## 1 b). Scatter plot  
@@ -47,6 +49,7 @@ Above is the boxplots of the housing prices for the most expensive 3 zipcodes.
 plot(housingData$sqft_living, housingData$price, main="relationship between sqft and price",
    xlab="sqft living", ylab="price", pch=20)
 ```
+  
 above is a scatterplot showing the relationship between sqft and price.
 
 ## 1 c).
@@ -96,7 +99,7 @@ The Rsquared of the model on testing data is 0.512
 ## 1. e)  
 ```{r}
 fancy = read.csv('_data_hw2/fancyhouse.csv')
-head(fancyhouse)
+head(fancy)
 ```
 ```{r}
 billgate = predict(modelpricezip, fancy)
@@ -166,7 +169,7 @@ summary(modelpoly)
 ```
 ```{r}
 modelpolypred = predict(modelpoly, test)
-prices = test_data$price
+prices = test$price
 e = prices - modelpolypred
 R2 = 1-sum(e^2)/sum((prices-mean(prices))^2)
 R2
@@ -191,6 +194,7 @@ plot(wineData$HarvestRain, wineData$Price, main="relationship between harvest ra
 plot(wineData$Age, wineData$Price, main="relationship between age and price",
    xlab="age of wine", ylab="price", pch=20)
 ```
+  
 The variable that looks to be the most correlated with Price would be AGST. The scatter plot looks the most patterned and we see that generally, the price increases as AGST increases, an upwards trend.
 ```{r}
 AGST <- cor.test(wineData$AGST, wineData$Price, 
@@ -206,6 +210,7 @@ winterRain
 harvestRain
 ageWine
 ```
+  
 As we can see from the pearson's correlation scores above, the cor of 0.6596 for AGST is the highest correlation between a variable and price. This backs up our claim before that AGST is the most correlated with price.  
 
 ## 3. Part II. Marginal Regression Analysis  
@@ -303,10 +308,12 @@ summary(BAfit)
 plot(baseballData$BA, baseballData$RS)
 abline(BAfit)
 ```
+  
 Above is the scatter plot using model RS ~ BA. The intercept and slope are -805.51, and 5864.84 respectively, the Rsquared is 0.6839
 ```{r}
 plot(BAfit)
 ```
+  
 From the second plot, the QQ plot of the fitted residuals for model RS ~ BA, we can verify that the residuals are not skewly distributed and that the model is reasonable.
 
 ```{r}
@@ -315,10 +322,12 @@ summary(OBPfit)
 plot(baseballData$OBP, baseballData$RS)
 abline(OBPfit)
 ```
+  
 Above is the scatter plot using model RS ~ OBP. The intercept and slope are -1076.6, and 5490.4 respectively, the Rsquared is 0.8109
 ```{r}
 plot(OBPfit)
 ```
+  
 From the second plot, the QQ plot of the fitted residuals for model RS ~ OBP, we can verify that the residuals are not skewly distributed and that the model is reasonable.
 
 ```{r}
@@ -327,10 +336,12 @@ summary(SLGfit)
 plot(baseballData$SLG, baseballData$RS)
 abline(SLGfit)
 ```
+  
 Above is the scatter plot using model RS ~ SLG. The intercept and slope are -289.37, and 2527.92 respectively, the Rsquared is 0.8441
 ```{r}
 plot(SLGfit)
 ```
+  
 From the second plot, the QQ plot of the fitted residuals for model RS ~ SLG, we can verify that the residuals are not skewly distributed and that the model is reasonable.
 
 Comparing the Rsquared results, we see that Rsquared for BA = 0.6839, Rsquared for OBP = 0.8109 and Rsquared for SLG = 0.8441. We see that the Rsquared result for OBP and for SLG is higher than the Rsquared for BA. That is consistent with Billy's claim that OBP and SLG have much more impact than BA. This is not consistent with the intuition that BA is thought to be the most responsible for RS.  
@@ -341,6 +352,7 @@ multi_fitBaseball = lm(RS ~ BA + SLG + OBP, data = baseballData)
 summary(multi_fitBaseball)
 plot(multi_fitBaseball)
 ```
+  
 For the model RS ∼ BA + SLG + OBP, the intercept is -806.08, and the coefficient for BA is -134.90 with significance p = 0.236  the coefficient for SLG is 1533.88 with significance p < 2e-16 And the coefficient for OBP is 2900.94 with significance p < 2e-16. The second plot above is the QQ plot of the residuals. We can verify that the residuals are not skewly distributed and that the model is reasonable. The fitting results is not consistent with that in Part II, especially for the fitted coefficient of BA. (coeff = 5864.84 vs -134.90, one is a big positive, and the other is negative). We find that BA is not significant and SLG and OBP is significant
 
 ```{r}
@@ -348,6 +360,7 @@ multi_fitBaseball2 = lm(RS ~ BA + SLG, data = baseballData)
 summary(multi_fitBaseball2)
 plot(multi_fitBaseball2)
 ```
+  
 For the model RS ∼ BA + SLG , the intercept is -551.08, and the coefficient for BA is 1904.66 with significance p < 2e-16  the coefficient for SLG is 1943.77 with significance p < 2e-16. The second plot above is the QQ plot of the residuals. We can verify that the residuals are not skewly distributed and that the model is reasonable. The fitting results is more consistent with that in Part II, especially for the fitted coefficient of BA. (coeff = 5864.84 vs 1904.66 vs -134.90 for model RS ∼ BA + SLG + OBP). Both of these variables are significant.
 
 Comparing the Rsquared for both of these models: for model RS ∼ BA + SLG + OBP, Rsquared = 0.9249, and for model RS ∼ BA + SLG, Rsquared = 0.8711. Therefore the model that we prefer is RS ∼ BA + SLG + OBP since the Rsquared is greater.  
@@ -359,6 +372,7 @@ multi_fitBaseball3 = lm(RS ~ SLG + OBP, data = baseballData)
 summary(multi_fitBaseball3)
 plot(multi_fitBaseball3)
 ```
+  
 For the model RS ∼ SLG + OBP , the intercept is -811.66, and the coefficient for SLG is 1517.58 with significance p < 2e-16  the coefficient for OBP is 2830.70 with significance p < 2e-16. The second plot above is the QQ plot of the residuals. We can verify that the residuals are not skewly distributed and that the model is reasonable. Both of these variables are significant.
 
 Comparing the Rsquared for models: for model RS ∼ BA + SLG + OBP, Rsquared = 0.9249, and for model RS ∼ SLG + OBP, Rsquared = 0.9248. Both Rsquared is roughly the same so we can consider dropping BA and just have SLG and OBP in our model.
